tests/errors/invalid_uescape2.pyx
# mode: error

u'\u12'

_ERRORS = '''
3:2: Invalid unicode escape '\u'
'''
